syntax = "proto3";

package delivery.experience.chat.salesforce;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option java_multiple_files = true;
option java_outer_classname = "Salesforce";
option java_package = "com.doordash.rpc.chat.salesforce";

// Salesforce case update payload. Sent for chat, phone and web cases.
message SalesforceCaseUpdateRequest {
  // First name of the assigned agent
  google.protobuf.StringValue agent_first_name = 1;
  // ID of the case
  string case_id = 2;
  // ID of the chat session
  string chat_session_id = 3;
  // Current status of the case
  CaseStatus case_status = 4;
  // Previous status of the case
  CaseStatus prev_case_status = 5;
  // ID for the case owner
  string owner_id = 6;
  // ID for the previous case owner
  google.protobuf.StringValue prev_owner_id = 7;
  // Unique escalation id
  string escalation_id = 8;
  // Indicates if the new owner is a real-time queue
  bool is_realtime_queue = 9;
  // Initial inbound to salesforce.
  CaseOrigin case_origin = 10;
  // Store ID
  google.protobuf.StringValue store_id = 11;
  // Business ID
  google.protobuf.StringValue business_id = 12;
  // Customer type
  google.protobuf.StringValue customer_type = 13;
  // Last modified date
  google.protobuf.Timestamp last_modified_date = 14;
  // Issue category
  google.protobuf.StringValue issue_category = 15;
  // Issue
  google.protobuf.StringValue issue = 16;
  // Case number
  google.protobuf.StringValue case_number = 17;
  // Created at
  google.protobuf.Timestamp created_at = 18;
  // Solved at
  google.protobuf.Timestamp solved_at = 19;
  // Closed at
  google.protobuf.Timestamp closed_at = 20;

  // Enum for case statuses
  enum CaseStatus {
    // Unspecified case status
    CASE_STATUS_UNSPECIFIED = 0;
    // Case is new
    CASE_STATUS_NEW = 1;
    // Case is in open
    CASE_STATUS_OPEN = 2;
    // Case was pending
    CASE_STATUS_PENDING = 3;
    // Case was solved
    CASE_STATUS_SOLVED = 4;
    // Case was closed
    CASE_STATUS_CLOSED = 5;
    // Case is waiting for internal team
    CASE_STATUS_WAITING_FOR_DD_INTERNAL_TEAM = 6;
    // Case was reopened
    CASE_STATUS_REOPENED = 7;
  }
  // Enum for source of the case in salesforce.
  enum CaseOrigin {
    // Unknown or missing.
    CASE_ORIGIN_UNSPECIFIED = 0;
    // Chat cases.
    CASE_ORIGIN_CHAT = 1;
    // Web cases.
    CASE_ORIGIN_WEB = 2;
    // Phone cases.
    CASE_ORIGIN_PHONE = 3;
    // Created from API calls to salesforce.
    CASE_ORIGIN_API = 4;
  }
}
