syntax = "proto3";

// buf:lint:ignore DIRECTORY_SAME_PACKAGE
package doordash.retail.catalog.v2;

import "doordash.retail.catalog.v2/unique_merchant_product_content.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option go_package = "github.com/doordash/services-protobuf/generated/doordash/retail/catalog/v2";
option java_generic_services = true;

// request for searching unique merchant product items / unique global product items
message EntitySearchRequest {
  //[optional] term match query to return UMP/UGP that contain one or more exact terms in a provided field.
  repeated TermMatchQuery term_match_queries = 1;
  //[optional] exact match query across different fields with different values using OR logic operator
  repeated ExactMatchQuery exact_match_queries = 2;
  //[optional] fuzzy match query across different fields with different values using OR logic operator
  repeated FuzzyMatchQuery fuzzy_match_queries = 3;
  //[optional] filters used to filter on matched result
  repeated Filter filters = 4;
  //[optional] pagination info
  RequestPaginationInfo pagination_info = 5;
  //[optional] fields to sort and order to sort by
  repeated Sort sorts = 6;
  //[optional] number of should clauses returned documents must match.
  google.protobuf.Int32Value minimum_should_match_number = 7;
  //[optional] exist query
  repeated ExistQuery exist_queries = 8;
}

// response for searching unique merchant product items /  unique global product items
message EntitySearchResponse {
  // number of total matched result
  google.protobuf.Int64Value total_matches = 1;
  // [deprecated] pagination info including offset for next position to return search result from
  ResponsePaginationInfo pagination_info = 2;
  // paginated result
  repeated doordash.retail.catalog.v2.UniqueMerchantProductContent result = 3;
}

// Query used to do term match on
message TermMatchQuery {
  // buf:lint:ignore ENUM_VALUE_PREFIX
  // Supported fields for term match
  enum TermSearchField {
    // search field unspecified
    SEARCH_FIELD_UNSPECIFIED = 0;
    // normalized upc list from enriched sku;
    ENRICHED_SKU_GTIN_LIST = 1;
    // normalized upc list from baseline sku;
    BASELINE_SKU_GTIN_LIST = 2;
  }
  // query string used for term match
  google.protobuf.StringValue query_string = 1;
  // search field
  TermSearchField field = 2;
  // boost score
  google.protobuf.FloatValue boost_score = 3;
}

// Query used to do exact match on
message ExactMatchQuery {
  // buf:lint:ignore ENUM_VALUE_PREFIX
  // Supported fields for exact match
  enum ExactSearchField {
    // search field unspecified
    SEARCH_FIELD_UNSPECIFIED = 0;
    // item_name
    ITEM_NAME = 1;
    // raw consumer facing item name
    RAW_CONSUMER_FACING_ITEM_NAME = 2;
    // dd_sic
    DD_SIC = 3;
    // dd_business_id
    DD_BUSINESS_ID = 4;
    // merchant supplied id
    MERCHANT_SUPPLIED_ID = 5;
    // brand id
    BRAND_ID = 6;
    // product category id
    PRODUCT_CATEGORY_ID = 7;
    // ump id
    UMP_ID = 8;
    // ugp_id;
    UGP_ID = 9;
    // global_catalog_id
    GLOBAL_CATALOG_ID = 10;
  }
  // query string used for fuzzy match
  google.protobuf.StringValue query_string = 1;
  // search filed
  ExactSearchField field = 2;
  // boost score
  google.protobuf.FloatValue boost_score = 3;
}

// Query used to do fuzzy match on
message FuzzyMatchQuery {
  // buf:lint:ignore ENUM_VALUE_PREFIX
  // Supported fields for fuzzy match
  enum FuzzySearchField {
    // search field unspecified
    SEARCH_FIELD_UNSPECIFIED = 0;
    // item_name
    ITEM_NAME = 1;
    // raw consumer facing item name
    RAW_CONSUMER_FACING_ITEM_NAME = 2;
  }
  // query string used for fuzzy match
  google.protobuf.StringValue query_string = 1;
  // search field
  FuzzySearchField field = 2;
  // boost score
  google.protobuf.FloatValue boost_score = 3;
}

// Query used to do exist check
message ExistQuery {
  // Supported fields for exist query
  enum ExistSearchField {
    // search field unspecified
    EXIST_SEARCH_FIELD_UNSPECIFIED = 0;
    // buf:lint:ignore ENUM_VALUE_PREFIX
    // ugp_id
    UGP_ID = 1;
  }
  // query string used for exist match
  google.protobuf.StringValue query_string = 1;
  // search field
  ExistSearchField field = 2;
}

// Filter shape to use with different types
message Filter {
  // buf:lint:ignore ENUM_VALUE_PREFIX
  // supported fields for filter
  enum FilterField {
    // filter field unspecified
    FILTER_FIELD_UNSPECIFIED = 0;
    // is_active
    IS_ACTIVE = 1;
    // timestamp for created at
    CREATED_AT = 2;
  }

  // [required] field to be filtered on, need to be indexed as keyword
  FilterField field = 1;
  // [optional] value
  oneof value {
    // if the indexed field is int type
    google.protobuf.Int64Value int_value = 2;
    // if the indexed field is string type
    google.protobuf.StringValue string_value = 3;
    // if the indexed field is boolean type
    google.protobuf.BoolValue bool_value = 4;
    // filter based on whether the field value is set
    google.protobuf.BoolValue existence = 5;
    // if the indexed field is a time type
    google.protobuf.Timestamp timestamp_value = 7;
  }
  // [optional] negate the filter condition, default to false
  google.protobuf.BoolValue must_not = 6;
  // [optional] Range
  Range range = 8;
}

// Search after query
message SearchAfter {
  // sorted columns used for search after
  repeated google.protobuf.StringValue field_value = 1;
  // time stamps used for search after
  repeated google.protobuf.Timestamp timestamp_value = 2;
  // long used for search after, can be used for epoch milli
  repeated google.protobuf.Int64Value int_value = 3;
}

// Sort query
message Sort {
  // buf:lint:ignore ENUM_VALUE_PREFIX
  // buf:lint:ignore ENUM_ZERO_VALUE_SUFFIX
  // Supported fields for exact match
  enum SortField {
    // search field unspecified
    SEARCH_FIELD_UNSPECIFIED = 0;
    // Created at time stamp
    CREATED_AT = 1;
    // dd_business_id
    DD_BUSINESS_ID = 2;
    // UMP id
    UMP_ID = 3;
  }

  // buf:lint:ignore ENUM_VALUE_PREFIX
  // buf:lint:ignore ENUM_ZERO_VALUE_SUFFIX
  // sort order
  enum Order {
    // Unspecified order
    UNSPECIFIED = 0;
    // ascending order
    ASC = 1;
    // descending order
    DESC = 2;
  }

  // field to sort
  SortField field = 1;
  // order to sort by
  Order order = 2;
}

// Query used to specify range
message Range {
  // buf:lint:ignore ENUM_VALUE_PREFIX
  // supported fields for filter
  enum RangeField {
    // filter field unspecified
    RANGE_FIELD_UNSPECIFIED = 0;
    // timestamp for created at
    CREATED_AT = 1;
  }

  // buf:lint:ignore ENUM_VALUE_PREFIX
  // buf:lint:ignore ENUM_ZERO_VALUE_SUFFIX
  // range query operation
  enum RangeOperation {
    // UNSPECIFIED
    UNSPECIFIED = 0;
    // greater Than
    GT = 1;
    // greater than or equal to
    GTE = 2;
    // less than
    LT = 3;
    // less than or equal to
    LTE = 4;
  }

  // Range field
  RangeField field = 1;

  // Range operation
  RangeOperation operation = 2;
}

// request pagination info for ES search tools
message RequestPaginationInfo {
  // [optional] pagination argument that defines the number of search results to return. Defaults to 10 and is same as limit (SQL)
  google.protobuf.Int64Value size = 1;

  // [deprecated] pagination argument that defines the number of hits to skip. Defaults to 0 and is same as offset (SQL)
  google.protobuf.Int64Value from = 2;

  //[optional] list values used for search after
  SearchAfter search_after = 3;
}

// result pagination info for ES search tools
message ResponsePaginationInfo {
  // [optional] offset for retrieving search result from
  google.protobuf.Int64Value offset = 1;
}
