syntax = "proto3";

package growth.engagement_platform.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option java_generic_services = true;
option java_multiple_files = true;
option java_package = "com.doordash.rpc.growth.engagement_platform.v1";

// EngagementProgramRunResultEvent
message EngagementProgramRunResultEvent {
  // entity batch
  EntityBatch entity_batch = 1;
  // ep program name
  google.protobuf.StringValue program_name = 2;
  // ep experiment name
  google.protobuf.StringValue program_experiment_name = 3;
  // name of the variant that the entities were assigned
  google.protobuf.StringValue program_experiment_variant = 4;
  // duration in seconds
  google.protobuf.Int32Value program_duration_seconds = 5;
  // metadata associated with this event
  map<string, string> metadata = 6;
  // ep program id
  google.protobuf.StringValue program_id = 7;
  // program run interval in hours
  google.protobuf.Int32Value program_run_interval_hours = 8;
}

// CustomFields
message CustomFields {
  // name of the property
  google.protobuf.StringValue field_name = 1;
  // value of the property
  google.protobuf.StringValue field_value = 2;
}

// EntityBatch
message EntityBatch {
  // entities
  repeated Entity entities = 1;
  // entity type
  google.protobuf.StringValue entity_type = 2;
  // shared metadata associated with this entityBatch
  map<string, string> metadata = 3;
  // batch id in UUID format
  google.protobuf.StringValue batch_id = 4;
}

// Entity data for each entity
message Entity {
  // entity_id
  google.protobuf.StringValue entity_id = 1;
  // idempotency key
  google.protobuf.StringValue idempotency_key = 2;
  // individual metadata associated with this entity
  map<string, string> metadata = 3;
  // definition of customized data field
  repeated CustomFields custom_fields = 4;
}
