syntax = "proto3";

package iguazu.events.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option go_package = "github.com/doordash/services-protobuf/generated/iguazu/events";
option java_multiple_files = true;
option java_package = "com.doordash.iguazu.events.v1";

// m_order_manager_network_available
message MOrderManagerNetworkAvailable {
  // IS_AVAILABLE
  google.protobuf.BoolValue is_available = 1;
}
