syntax = "proto3";

package risk_platform.event.v1.risk_stream.v1;
option java_package = "com.doordash.rpc.risk_stream.realtime";
import "google/protobuf/timestamp.proto";

// an event which fires when case creation is skipped
message ReviewQueuesSkipCaseEvent {
  // unique name of review queue
  string queue_name = 1;
  // entity ID, eg: consumer_id or dasher_id
  string entity_id = 2;
  // case details, this is the same info shown in workstation
  map<string, string> case_details = 3;
  // reason case is skipped, eg: capacity or idempotency
  string skip_reason = 4;
  // time which case was skipped
  google.protobuf.Timestamp event_time = 5;
}
