syntax = "proto3";

package templating_service.v1;

import "common/notification.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "growth/common/common.proto";
import "growth/notification_platform/notification_platform_service.proto";
import "templating_service/templating_service_enums.proto";

option java_generic_services = true;
option java_multiple_files = true;
option java_package = "com.doordash.rpc.templating_service";

/**
   Common notification campaign object
*/
message NotificationCampaign {
  // notification campaign id
  string campaign_id = 1;
  // name of the campaign
  string name = 2;
  // description of the campaign
  string description = 3;
  // template associated with campaign
  string template_id = 4;
  // channelType(Email, Push, Hub, SMS)
  doordash.growth.notification_platform.v1.ChannelType channel = 5;
  // user's entity type (Cx,Dx,Mx)
  doordash.growth.notification_platform.v1.UserEntityType entity_type = 6;
  // message type (transactional/marketing)
  MessageType message_type = 7;
  // sub message type (Order updates)
  SubMessageType sub_message_type = 8;
  // priority used in postal service queues
  NotificationPriority priority = 9;
  // notification platform ranking
  NotificationRanking ranking = 10;
  // campaign's status (Draft/Active/Inactive)
  CampaignStatus status = 11;
  // campaign trigger type (API/blast)
  CampaignTriggerType trigger_type = 12;
  // Source from campaign is created or imported
  CampaignSource source = 13;
  // owner user email who owns the campaign
  string owner = 14;
  // user id of the creator
  int64 created_by = 15;
  // Campaign's creation time
  google.protobuf.Timestamp created_at = 16;
  // used id of the user who recently updated the template
  int64 updated_by = 17;
  // latest modified time
  google.protobuf.Timestamp updated_at = 18;
  // user object of the creator
  User created_by_user = 19;
  // user object of the updater
  User updated_by_user = 20;
  // notification delivery config
  NotificationDeliveryConfig notification_delivery_config = 21;
}

/**
   email template
*/
message EmailTemplate {
  // template id
  string template_id = 1;
  // template name
  string name = 2;
  // template's content locale
  Locale locale = 3;
  // template's locale based version
  int32 version = 4;
  // from email address
  string from_email = 5;
  // from name
  string from_name = 6;
  // reply to email address
  string reply_to_email = 7;
  // list of email to CCed
  repeated string cc_emails = 8;
  // list of email to BCCed
  repeated string bcc_emails = 9;
  // localized subject of the template
  string subject = 10;
  // localized preheader text of the template
  string preheader_text = 11;
  // localized html body
  string html_body = 12;
  // localized text body
  string text_body = 13;
  // template parsing lang (handlerbar/liquid)
  TemplateParsingLanguage template_language = 14;
  // translation source (smartling/c3po)
  TranslationSource translation_source = 15;
  // boolean representing weather this is the current active version of the
  // template for a specific locale
  bool is_current_version = 16;
  // user id of the creator
  int64 created_by = 17;
  // timestamp when this specific version is created
  google.protobuf.Timestamp created_at = 18;
  // user object of the creator
  User created_by_user = 19;
  //  template categories
  repeated TemplateCategory categories = 20;
}

/**
   Common template model for all templates (EmailTemplate, PushTemplate,
   HubTemplate)
*/
message Template {
  // template id
  string template_id = 1;
  // template name
  string name = 2;
  // channelType(Email, Push, Hub, SMS)
  doordash.growth.notification_platform.v1.ChannelType channel = 3;
  // boolean representing weather this is the current active version of the
  // template for specific locale
  bool is_current_version = 4;
  // template version_id
  int32 version_id = 5;
  // user id of the user who made recent change
  string updated_by = 6;
  // modified timestamp
  google.protobuf.Timestamp updated_at = 7;
  // user object of the updater
  User updated_by_user = 8;
  //  template categories
  repeated TemplateCategory categories = 9;
}

// Message object that will be used to represent the template category
message TemplateCategory {
  // timestamp when this specific version is created
  google.protobuf.StringValue display_name = 1;
}

/**
   Common snippet model can be used by any channel
*/
message Snippet {
  // snippet id
  string snippet_id = 1;
  // snippet name
  string name = 2;
  // variables used in this snippet
  repeated string variables = 3;
  // text or html body
  string body = 4;
  // user id of the creator
  int64 created_by = 5;
  // created timestamp
  google.protobuf.Timestamp created_at = 6;
  // used id of the user who recently updated the snippet
  int64 updated_by = 7;
  // latest modified time
  google.protobuf.Timestamp updated_at = 8;
  // user object of the creator
  User created_by_user = 9;
  // user object of the updater
  User updated_by_user = 10;
}

/**
   Common pagination model for get list APIs
*/
message PaginationData {
  // total number of items
  int32 total_elements = 1;
  // number of pages for the request
  int32 total_pages = 2;
  // current page number
  int32 current_page = 3;
  // number of elements in this response
  int32 page_size = 4;
}

/**
   Common model for user data
*/
message User {
  // user id
  int64 user_id = 1;
  // user email
  string email = 2;
  // user first name
  string first_name = 3;
  // user last name
  string last_name = 4;
}

// notification template
message NotificationTemplate {
  // metadata
  TemplateMetadata metadata = 1;
  // content for all locales, key is locale
  map<string, Content> localized_contents = 2;
  // channel specific template config
  oneof channel_template_config {
    // email config
    EmailConfig email_config = 31;
    // hub config
    HubConfig hub_config = 32;
    // push config
    PushConfig push_config = 33;
  }

  // default_locale
  google.protobuf.StringValue default_locale = 3;
}

// template metadata
message TemplateMetadata {
  // deleted values, do not reuse
  reserved 10, 12, 14;
  // deleted fields, do not reuse
  reserved "translation_source", "active_locales", "owner_group_uuid";

  // template id
  google.protobuf.StringValue template_id = 1;
  // user friendly name
  google.protobuf.StringValue display_name = 2;
  // template description
  google.protobuf.StringValue description = 3;
  // channelType(Email, Push, Hub, SMS)
  doordash.growth.notification_platform.v1.ChannelType channel = 4;
  // who created the template
  google.protobuf.StringValue created_by_email = 5;
  // creation timestamp
  google.protobuf.Timestamp created_at_utc = 6;
  // who updated the template
  google.protobuf.StringValue updated_by_email = 7;
  // last update timestamp
  google.protobuf.Timestamp updated_at_utc = 8;
  // template parsing lang (handlerbar/liquid)
  TemplateParsingLanguage template_language = 9;
  // campaign id
  google.protobuf.StringValue campaign_id = 11;
  // locales that are not deleted (locale in format LANG_REGION, e.g. EN_US)
  repeated google.protobuf.StringValue active_locale_strings = 13;
  // owner group name
  google.protobuf.StringValue owner_group_name = 15;
  //  template categories
  repeated TemplateCategory categories = 16;
}

// email config
message EmailConfig {
  // from email
  google.protobuf.StringValue from_email = 1;
  // reply to email address
  google.protobuf.StringValue reply_to_email = 2;
  // list of email to CCed
  repeated google.protobuf.StringValue cc_emails = 3;
  // list of email to BCCed
  repeated google.protobuf.StringValue bcc_emails = 4;
}

// hub config
message HubConfig {
  // template type
  HubTemplateType template_type = 1;
}

// hum template type
enum HubTemplateType {
  // unspecified is required in proto3
  HUB_TEMPLATE_TYPE_UNSPECIFIED = 0;
  // base template
  HUB_TEMPLATE_TYPE_BASE = 1;
  // carousel template
  HUB_TEMPLATE_TYPE_CAROUSEL = 2;
  // progress bar template
  HUB_TEMPLATE_TYPE_PROGRESS_BAR = 3;
}

// push config
message PushConfig {}

// template content
message Content {
  // deleted value, do not reuse
  reserved 1;
  // delete field, do not reuse
  reserved "locale";

  // signal whether this locale is deleted or not
  google.protobuf.BoolValue is_deleted = 2;
  // channel specific content
  oneof channel_content {
    // email content
    EmailContent email_content = 31;
    // push content
    PushContent push_content = 32;
    // hub content
    HubContent hub_content = 33;
  }
  // locale (in LANG_REGION format, e.g. EN_US)
  google.protobuf.StringValue locale_string = 4;

  // version
  google.protobuf.Int32Value version = 5;
  // quality stage
  NotificationTemplateQualityStage quality_stage = 6;
  // creation timestamp
  google.protobuf.Timestamp created_at_utc = 7;
  // user email of the creator
  google.protobuf.StringValue created_by_email = 8;
  // timestamp of the last update
  google.protobuf.Timestamp updated_at_utc = 9;
  // user email of the last updater
  google.protobuf.StringValue updated_by_email = 10;
  // version names
  google.protobuf.StringValue version_name = 11;
}

// email content
message EmailContent {
  // localized title of the template
  google.protobuf.StringValue title = 1;
  // localized preheader text of the template
  google.protobuf.StringValue preheader_text = 2;
  // localized html body
  google.protobuf.StringValue html_body = 3;
  // localized text body
  google.protobuf.StringValue text_body = 4;
  // from name
  google.protobuf.StringValue from_name = 5;
}

// hub content
message HubContent {
  // title
  google.protobuf.StringValue title = 1;
  // body
  google.protobuf.StringValue body = 2;
  // image url
  google.protobuf.StringValue image_url = 3;
  // action deeplink url
  google.protobuf.StringValue action_url = 4;
}

// push content
message PushContent {
  // localized title of the template
  google.protobuf.StringValue title = 1;
  // localized text body
  google.protobuf.StringValue body = 2;
  // image url
  google.protobuf.StringValue image_url = 3;
  // url for action
  google.protobuf.StringValue action_url = 4;
  // Android specific content
  AndroidSpecificContent android_specific_content = 5;
  // iOS specific content
  IOSSpecificContent ios_specific_content = 6;
}

// android specific content
message AndroidSpecificContent {
  // summary
  google.protobuf.StringValue summary = 1;
}

// iOS specific content
message IOSSpecificContent {}

// data for a notification template version
message NotificationTemplateContentVersionInfo {
  // version
  google.protobuf.Int32Value version = 1;
  // quality stage
  NotificationTemplateQualityStage quality_stage = 2;
  // version name
  google.protobuf.StringValue version_name = 3;
}

// Notification Campaign
message NotificationCampaignV2 {
  // deleted value, do not reuse
  reserved 17;
  // delete field, do not reuse
  reserved "owner_group_uuid";

  // notification campaign id
  google.protobuf.StringValue campaign_id = 1;
  // name of the campaign
  google.protobuf.StringValue name = 2;
  // description of the campaign
  google.protobuf.StringValue description = 3;
  // template associated with campaign
  google.protobuf.StringValue template_id = 4;
  // channelType(Email, Push, Hub, SMS)
  common.notification.v1.NotificationChannelType notification_channel = 5;
  // message type (transactional/marketing)
  common.notification.v1.NotificationMessageType notification_message_type = 6;
  // sub message type (Order updates)
  common.notification.v1.NotificationSubMessageType notification_sub_message_type = 7;
  // Notification Campaign Priority
  common.notification.v1.NotificationPriority notification_priority = 8;
  // campaign's status (Draft/Active/Inactive)
  templating_service.v1.CampaignStatus status = 9;
  // Source from campaign is created or imported
  templating_service.v1.CampaignSource source = 10;
  // user email of the creator
  google.protobuf.StringValue created_by_email = 11;
  // Campaign's creation time
  google.protobuf.Timestamp created_at_utc = 12;
  // used email of the user who recently updated the template
  google.protobuf.StringValue updated_by_email = 13;
  // latest modified time
  google.protobuf.Timestamp updated_at_utc = 14;
  // notification audience Type
  common.notification.v1.NotificationAudienceType notification_audience_type = 15;
  // notification ranking
  NotificationRanking notification_ranking = 16;
  // owner group name
  google.protobuf.StringValue owner_group_name = 18;
  // notification delivery config
  NotificationDeliveryConfig notification_delivery_config = 19;
  // lifecycle stage
  NotificationCampaignLifecycleStage lifecycle_stage = 20;
}

// Notification Delivery Config
message NotificationDeliveryConfig {
  // notification delivery type of campaign
  NotificationDeliveryType notification_delivery_type = 1;
  // scheduled delivery time window
  NotificationDeliveryTimeWindow notification_delivery_window = 2;
}

// Notification Delivery Time Window
message NotificationDeliveryTimeWindow {
  // scheduled Start Hour for the delivery time window
  int32 start_hour = 1;
  // scheduled End Hour for the delivery time window
  int32 end_hour = 2;
}
